# l-school

./: .gitignore  .pdm-python  readme.md
book_js/03-variables/: 01.js  02.js  package-lock.json  package.json
book_js/04-input-output/: 01.js  02.html  02.js  02_browser.js  90.js  package-lock.json  package.json  personalized_greeting.js  personalized_greeting_browser.html  personalized_greeting_browser.js
book_js/05-functions/: 03.js  90.js  91.js  93.js  package-lock.json  package.json
book_js/07-loops/: 01_factorial.js  05-random.js  06-factorial-recursive.js  b.js  b2.js  call-stack.js  fibonacci.js  for-loop.js  package-lock.json  package.json  recursion.js  search.js
book_js/08-arrays/: 02.js  03.js  03_foreach.js  04.js  05.js  06.js  07.js  08.js  09.js  10.js  a.js  b.js  c.js  d.js  e.js  z.js
book_js/09-objects/: 04.js  07.js  08-v2.js  08.js  09.js  11.js  12.js  13.js  a.js  b.js
book_js/10-more_stuff/: 04.js  05.js  06.js  08.js  09.js  a.js  b.js
js210/: package-lock.json  package.json  temp.js
js210/02-functions-and-var-scope/: 01.js  02.js  a.js  b.js  c.js  c.py  d.js  e.js
js210/03-exercises/: 04_continue.js  04_recursive.js  04_s.js  05_s.js  06_s.js  07_s.js  08_s.js  09_s.js  10.html  10_guessing-the-password.js  11.html  11_student-grade.js  12_greatest-common-divisor.js  13.html  13_goldbach-numbers.js  14_pattern-generation.js  15_trimming-spaces.js  16_splitting-a-string.js  17_repeating-strings.js  18_string-starts-with.js  19_converting-strings-to-lower-case.js  20_substring-1.js  21_substring-2.js  22_code-review-rot13-cipher.js  23_index-of-substring.js  files.sh  package-lock.json  package.json  temp.html
js210/04_arrays/: 02.js  08_comparing-arrays.js
js210/05_objects/: 12_welcome-stranger.js  13_repeated-chars.js
js210/06_writing-better-code/: 05_writing-better-code.js
js210/eslint-test/: .eslintrc.yml  package-lock.json  package.json
js210/eslint-test2/: eslint.config.mjs  lint-me.js  package-lock.json  package.json
js210/small_problems/: package.json  readme.md
js215/01_lists-and-functions/: 08_diy-map-method.js  08b_use-diy-map.js  16_movie-releases.js  18_anagrams.js  20_class-records-summary.js  a_iterate.js  test.js
js225/: a.py  b.py  e.js  temp.js
js225/02_contexts-and-objs/: a.js  moduleScope.js  temp.js
js225/04_closures-function-scope/: 07a-banking.js  10a_pfa.js  temp.js
js225/05_obj-creation-patterns/: temp.js
js225/oop_book/: a.js  cl01.js  cl21.js  cl22.js  cl22_solve.js  cl23.js  cl25.js  of1.js  of2.js  temp.js
js230/: temp.html
js230/01-12/: index.html
js230/02-08_event-object/: 01_move-the-x.html  02.js  04_char-count.html  sibling-bubble.html
js230/02-events/: dom-auto-variables.html  dom-auto-vars-part2.html
js230/03-webpages/: temp.html
js230/scratch/: index.html  myscript.js
js235/: temp.html
js235/02_promises-and-async/: temp.js
js235/03_http-in-js/: temp.txt
js235/book_web-apis/: pyproject.toml  temp.sh  temp.txt  temp2.sh
ls170/simple_http_server/: http_server.sh
ls180/: dump.sql
ls180/medium_subqueries_and_more/: dump.sql
ls202/: tmp.py
ls215/: .eslintrc.yml
misc/: left.py  right.py  scratch.py
py101/: a.py
py101-L2-small_problems/: 09.Flowcharts.ipynb  27_Coding_Tips_2.ipynb  py101_misc.ipynb  test.py
py101-L3-practice_problems/: 03_Easy-2.ipynb  04.ipynb  BLANK.ipynb
py110/: temp.py
py130/: .coverage  car.py  temp.py  temp.txt  temp2.py
py175/: .pdm-python
py175/03_flask/18_code_challenge/: README.md  app.py  pyproject.toml
py175/03_flask/18_code_challenge/static/data/: users.yaml
py175/03_flask/18_code_challenge/templates/: layout.html  user.html  username_list.html  users.html
py175/03_flask/book_viewer_starter/: app.py  pyproject.toml
py175/03_flask/book_viewer_starter/templates/: chapters.html  home.html  index.html  layout.html  search.html  test.html
py175/04_todo_app/02_todo/: app.py  pyproject.toml  requirements.txt  utils.py
py175/04_todo_app/02_todo/templates/: 404.html  edit_list.html  layout.html  list.html  lists.html  new_list.html
py175/04_todo_app/02_todo/tests/: basic_tests.py
py175/05_file-based-cms/: app.py  passwords.py  pyproject.toml  scratch.py  scratch2.py  test_app.py  utils.py
py175/05_file-based-cms/cms/data/: a.html  abc.txt  about.txt  awefaewf.txt  changes.txt  hi_there.txt  history.txt  markdown_test.md  new_markdown.md  users.yaml
py175/05_file-based-cms/static/stylesheets/: application.css
py175/05_file-based-cms/templates/: edit.html  file.html  index.html  layout.html  login.html  new_file.html
py175/05_file-based-cms/tests/: test_app.py
py185/01_intro/04_execute_from_python/: .pdm-python  pyproject.toml
py185/02_interact_w_db_code/: .pdm-python  dump.sql  expense  pyproject.toml  schema.sql
py185/03_db_web_app/04_final_optimized/: .pdm-python  app.py  pyproject.toml
(+1047 files in other folders)
