[project]
name = "book_web-apis"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "SValenziano", email = "senorvalenz@gmail.com"},
]
dependencies = ["httpie>=3.2.4"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
