[tool.pdm]
distribution = true

[tool.pdm.build]
includes = []
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "py175-5_file-based-cms"
version = "0.1.0"
description = ""
authors = [
    {name = "senorvalenz", email = "senorvalenz@gmail.com"},
]
dependencies = [
    "flask<4.0.0,>=3.0.0",
    "gunicorn>22.0.0",
    "uuid<2.0,>=1.30",
]
requires-python = "<4.0,>=3.8"
readme = "README.md"
license = {text = "MIT"}

