[project]
name = "expenses"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "SValenziano", email = "senorvalenz@gmail.com"},
]
dependencies = ["psycopg2>=2.9.10"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "None"}


[tool.pdm]
distribution = false
