[project]
name = "04_execute_from_python"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "SValenziano", email = "senorvalenz@gmail.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "None"}


[tool.pdm]
distribution = false
