[tool.poetry]
name = "todos"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
gunicorn = "^21.2.0"
uuid = "^1.30"
psycopg2 = "^2.9.10"



[tool.pdm]
distribution = false

[tool.pdm.build]
includes = []
[project]
name = "todos"
version = "0.1.0"
description = ""
authors = [
    {name = "SValenziano", email = "senorvalenz@gmail.com"},
    {name = "Your Name", email = "you@example.com"},
]
dependencies = [
    "flask<4.0.0,>=3.0.0",
    "gunicorn<22.0.0,>=21.2.0",
    "uuid<2.0,>=1.30",
    "psycopg2<3.0.0,>=2.9.10",
]
requires-python = "<4.0,>=3.11"
readme = "README.md"
license = {text = "MIT"}

